--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/about.css">
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.animateNumber.js"></script>
 	<script src="js/about.js"></script>
 </head>
 <body>
@@ -112,28 +113,28 @@
 					<div class="col-sm-6">
 						<h4>MASSIVE SKILLS</h4>
 						<div class="bar">
-							<div class="percent p1" style="width:80%">
+							<div class="percent p1">
 								HTML / CSS / JQUERY
 							</div>
 							<div class="pin">80%</div>
 						</div>
 
 						<div class="bar">
-							<div class="percent p2" style="width:90%">
+							<div class="percent p2">
 								PHOTOSHOP
 							</div>
 							<div class="pin">90%</div>
 						</div>
 
 						<div class="bar">
-							<div class="percent p3" style="width:75%">
+							<div class="percent p3">
 								GRAPHIC DESIGN
 							</div>
 							<div class="pin">75%</div>
 						</div>
 
 						<div class="bar">
-							<div class="percent p4" style="width:82%">
+							<div class="percent p4">
 								PHP / WORDPRESS
 							</div>
 							<div class="pin">82%</div>
@@ -256,25 +257,25 @@
 					<div class="row">
 						<div class="col-sm-3">
 							<i class="icon-database-1"></i>
-							<h1>36</h1>
+							<h1 class="count">36</h1>
 							<p>HTML MULTIPAGE</p>
 						</div>
 
 						<div class="col-sm-3">
 							<i class="icon-desktop"></i>
-							<h1>29</h1>
+							<h1 class="count">29</h1>
 							<p>ONE PAGE DEMO</p>
 						</div>
 
 						<div class="col-sm-3">
 							<i class="icon-database"></i>
-							<h1>87</h1>
+							<h1 class="count">87</h1>
 							<p>USEFULL SHORTCODE</p>
 						</div>
 
 						<div class="col-sm-3">
 							<i class="icon-flow-line"></i>
-							<h1>17</h1>
+							<h1 class="count">17</h1>
 							<p>DIFFRENT CATEGORY</p>
 						</div>
 					</div>
