--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About us</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/fontello.css">
-	<link rel="stylesheet" href="css/about.css">
-	<script src="js/jquery.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.animateNumber.js"></script>
-	<script src="js/about.js"></script>
+	<link rel="stylesheet" href="about/css/bootstrap.min.css">
+	<link rel="stylesheet" href="about/css/normalize.css">
+	<link rel="stylesheet" href="about/css/fontello.css">
+	<link rel="stylesheet" href="about/css/about.css">
+	<script src="about/js/jquery.js"></script>
+	<script src="about/js/bootstrap.min.js"></script>
+	<script src="about/js/jquery.animateNumber.js"></script>
+	<script src="about/js/about.js"></script>
 </head>
 <body>
 	<div class="wrap">
@@ -18,7 +18,7 @@
 			<div class="full-width container  ">
 				<div class="row clearfix">
 					<div class="logo pull-left">
-						<a href="#"><img src="image/logo2x.png" id='logo' alt="massive"></a>
+						<a href="#"><img src="about/image/logo2x.png" id='logo' alt="massive"></a>
 					</div>
 
 					<div class="nav pull-right">
@@ -71,15 +71,15 @@
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
-									<img src="image/p1.jpg" alt="...">
+									<img src="about/image/p1.jpg" alt="...">
 								</div>
 
 								<div class="item">
-									<img src="image/p2.jpg" alt="...">
+									<img src="about/image/p2.jpg" alt="...">
 								</div>
 
 								<div class="item">
-									<img src="image/p3.jpg" alt="...">
+									<img src="about/image/p3.jpg" alt="...">
 								</div>
 	  						</div>
 
@@ -182,7 +182,7 @@
 						<ul class="clearfix">
 							<li class="col-sm-4">
 								<div class="team-member">
-									<img src="image/a.jpg" alt="member">
+									<img src="about/image/a.jpg" alt="member">
 										<div class="cover">
 											<div class="desk">
 												<h4>I lOVE DESIGN</h4>
@@ -204,7 +204,7 @@
 							
 							<li class="col-sm-4">
 								<div class="team-member">
-									<img src="image/b.jpg" alt="member">
+									<img src="about/image/b.jpg" alt="member">
 									<div class="cover">
 										<div class="desk">
 											<h4>I lOVE DESIGN</h4>
@@ -226,7 +226,7 @@
 
 							<li class="col-sm-4">
 								<div class="team-member">
-									<img src="image/c.jpg" alt="member" class="resopnsive">
+									<img src="about/image/c.jpg" alt="member" class="resopnsive">
 									<div class="cover">
 										<div class="desk">
 											<h4>I lOVE DESIGN</h4>
@@ -291,12 +291,12 @@
 					</div>
 
 					<div class="client clearfix">
-						<img src="image/c-1.png" alt="logo">
-						<img src="image/c-2.png" alt="logo">
-						<img src="image/c-3.png" alt="logo">
-						<img src="image/c-4.png" alt="logo">
-						<img src="image/c-5.png" alt="logo">
-						<img src="image/c-6.png" alt="logo">
+						<img src="about/image/c-1.png" alt="logo">
+						<img src="about/image/c-2.png" alt="logo">
+						<img src="about/image/c-3.png" alt="logo">
+						<img src="about/image/c-4.png" alt="logo">
+						<img src="about/image/c-5.png" alt="logo">
+						<img src="about/image/c-6.png" alt="logo">
 					</div>
 			</div>
 		</div>
@@ -307,7 +307,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-3 b-logo">
-						<a href="#"><img src="image/logo.png" alt="logo"></a>
+						<a href="#"><img src="about/image/logo.png" alt="logo"></a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla natus, beatae libero.</p>
 					</div>
 
@@ -335,14 +335,14 @@
 					<div class="col-sm-3">
 						<h5>RECENT WORK</h5>
 						<ul class="clearfix r-work">
-							<li class="pull-left"><a href="href#"><img src="image/r1.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r2.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r3.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r4.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r5.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r6.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r7.jpg" alt=""></a></li>
-							<li class="pull-left"><a href="href#"><img src="image/r8.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r1.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r2.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r3.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r4.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r5.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r6.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r7.jpg" alt=""></a></li>
+							<li class="pull-left"><a href="href#"><img src="about/image/r8.jpg" alt=""></a></li>
 						</ul>
 					</div>
 				</div>
