--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 		</div>
 			
 
-		<div class="gray">
+		<div class="gray .cn">
 			<div class="gray-content">
 				<div class="container">
 					<div class="row">
