--- a/index.html
+++ b/index.html
@@ -256,25 +256,25 @@
 					<div class="row">
 						<div class="col-sm-3">
 							<i class="icon-database-1"></i>
-							<h1 class="count" data-n="36">0</h1>
+							<h1 class="count">36</h1>
 							<p>HTML MULTIPAGE</p>
 						</div>
 
 						<div class="col-sm-3">
 							<i class="icon-desktop"></i>
-							<h1 class="count" data-n="29">0</h1>
+							<h1 class="count">29</h1>
 							<p>ONE PAGE DEMO</p>
 						</div>
 
 						<div class="col-sm-3">
 							<i class="icon-database"></i>
-							<h1 class="count" data-n="87">0</h1>
+							<h1 class="count">87</h1>
 							<p>USEFULL SHORTCODE</p>
 						</div>
 
 						<div class="col-sm-3">
 							<i class="icon-flow-line"></i>
-							<h1 class="count" data-n="17">0</h1>
+							<h1 class="count">17</h1>
 							<p>DIFFRENT CATEGORY</p>
 						</div>
 					</div>
